// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows adding, editing and removing a Metric Assignment 1`] = `
<div>
  <div
    class="makeStyles-root-11"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom"
    >
      Assign Metrics
    </h4>
    <div
      class="MuiTableContainer-root"
    >
      <table
        class="MuiTable-root"
      >
        <thead
          class="MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Metric
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Attribution Window
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Change Expected?
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Minimum Difference
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body"
              colspan="5"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
              >
                You don't have any metrics yet.
              </p>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="makeStyles-addMetric-12"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-addMetricAddSymbol-13"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <div
        class="MuiFormControl-root makeStyles-addMetricSelect-15"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="add-metric-label add-metric-select"
            class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
            id="add-metric-select"
            role="button"
            tabindex="0"
          >
            <span
              class="makeStyles-addMetricPlaceholder-14"
            >
              Select a Metric
            </span>
          </div>
          <input
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <button
        aria-label="Add metric"
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall MuiButton-disableElevation"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`allows adding, editing and removing a Metric Assignment 2`] = `
<div>
  <div
    class="makeStyles-root-11"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom"
    >
      Assign Metrics
    </h4>
    <div
      class="MuiTableContainer-root"
    >
      <table
        class="MuiTable-root"
      >
        <thead
          class="MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Metric
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Attribution Window
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Change Expected?
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Minimum Difference
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body"
              colspan="5"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
              >
                You don't have any metrics yet.
              </p>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="makeStyles-addMetric-12"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-addMetricAddSymbol-13"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <div
        class="MuiFormControl-root makeStyles-addMetricSelect-15"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="add-metric-label add-metric-select"
            class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
            id="add-metric-select"
            role="button"
            tabindex="0"
          >
            <span
              class="makeStyles-addMetricPlaceholder-14"
            >
              Select a Metric
            </span>
          </div>
          <input
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <button
        aria-label="Add metric"
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall MuiButton-disableElevation"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`allows adding, editing and removing a Metric Assignment 3`] = `
<div>
  <div
    class="makeStyles-root-11"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom"
    >
      Assign Metrics
    </h4>
    <div
      class="MuiTableContainer-root"
    >
      <table
        class="MuiTable-root"
      >
        <thead
          class="MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Metric
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Attribution Window
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Change Expected?
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Minimum Difference
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              <span
                class="makeStyles-metricName-17"
                title="string"
              >
                asdf_7d_refund
              </span>
              <br />
              <span
                class="makeStyles-primary-18"
              >
                Primary
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              <div
                aria-label="Attribution Window"
                class="MuiInputBase-root MuiOutlinedInput-root makeStyles-attributionWindowSelect-16"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="mui-component-select-experiment.metricAssignments[0].attributionWindowSeconds"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                  id="mui-component-select-experiment.metricAssignments[0].attributionWindowSeconds"
                  role="button"
                  tabindex="0"
                >
                  -
                </div>
                <input
                  name="experiment.metricAssignments[0].attributionWindowSeconds"
                  type="hidden"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="PrivateNotchedOutline-legend-22"
                    style="width: 0.01px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body makeStyles-changeExpected-20"
            >
              <span
                class="MuiSwitch-root"
              >
                <span
                  aria-disabled="false"
                  aria-label="Change Expected"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-25 MuiSwitch-switchBase MuiSwitch-colorSecondary"
                  variant="outlined"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-28 MuiSwitch-input"
                      id="experiment.metricAssignments[0].changeExpected"
                      name="experiment.metricAssignments[0].changeExpected"
                      type="checkbox"
                      value="false"
                    />
                    <span
                      class="MuiSwitch-thumb"
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiSwitch-track"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              <div
                aria-label="Min difference"
                class="MuiFormControl-root MuiTextField-root makeStyles-minDifferenceField-19"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
                >
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionStart"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
                    >
                      $
                    </p>
                  </div>
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
                    name="experiment.metricAssignments[0].minDifference"
                    placeholder="-"
                    type="number"
                    value=""
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-22"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              <div>
                <button
                  aria-controls="menu"
                  aria-haspopup="true"
                  aria-label="more"
                  class="MuiButtonBase-root MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="makeStyles-addMetric-12"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-addMetricAddSymbol-13"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <div
        class="MuiFormControl-root makeStyles-addMetricSelect-15"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="add-metric-label add-metric-select"
            class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
            id="add-metric-select"
            role="button"
            tabindex="0"
          >
            <span
              class="makeStyles-addMetricPlaceholder-14"
            >
              Select a Metric
            </span>
          </div>
          <input
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <button
        aria-label="Add metric"
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall MuiButton-disableElevation"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`allows adding, editing and removing a Metric Assignment 4`] = `
<div
  aria-hidden="true"
>
  <div
    class="makeStyles-root-11"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom"
    >
      Assign Metrics
    </h4>
    <div
      class="MuiTableContainer-root"
    >
      <table
        class="MuiTable-root"
      >
        <thead
          class="MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Metric
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Attribution Window
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Change Expected?
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Minimum Difference
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              <span
                class="makeStyles-metricName-17"
                title="string"
              >
                asdf_7d_refund
              </span>
              <br />
              <span
                class="makeStyles-primary-18"
              >
                Primary
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              <div
                aria-label="Attribution Window"
                class="MuiInputBase-root MuiOutlinedInput-root makeStyles-attributionWindowSelect-16"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="mui-component-select-experiment.metricAssignments[0].attributionWindowSeconds"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                  id="mui-component-select-experiment.metricAssignments[0].attributionWindowSeconds"
                  role="button"
                  tabindex="0"
                >
                  -
                </div>
                <input
                  name="experiment.metricAssignments[0].attributionWindowSeconds"
                  type="hidden"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="PrivateNotchedOutline-legend-22"
                    style="width: 0.01px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body makeStyles-changeExpected-20"
            >
              <span
                class="MuiSwitch-root"
              >
                <span
                  aria-disabled="false"
                  aria-label="Change Expected"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-25 MuiSwitch-switchBase MuiSwitch-colorSecondary"
                  variant="outlined"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-28 MuiSwitch-input"
                      id="experiment.metricAssignments[0].changeExpected"
                      name="experiment.metricAssignments[0].changeExpected"
                      type="checkbox"
                      value="false"
                    />
                    <span
                      class="MuiSwitch-thumb"
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiSwitch-track"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              <div
                aria-label="Min difference"
                class="MuiFormControl-root MuiTextField-root makeStyles-minDifferenceField-19"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
                >
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionStart"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
                    >
                      $
                    </p>
                  </div>
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
                    name="experiment.metricAssignments[0].minDifference"
                    placeholder="-"
                    type="number"
                    value=""
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-22"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              <div>
                <button
                  aria-controls="menu"
                  aria-haspopup="true"
                  aria-label="more"
                  class="MuiButtonBase-root MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="makeStyles-addMetric-12"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-addMetricAddSymbol-13"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <div
        class="MuiFormControl-root makeStyles-addMetricSelect-15"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="add-metric-label add-metric-select"
            class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
            id="add-metric-select"
            role="button"
            tabindex="0"
          >
            <span
              class="makeStyles-addMetricPlaceholder-14"
            >
              Select a Metric
            </span>
          </div>
          <input
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <button
        aria-label="Add metric"
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall MuiButton-disableElevation"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`allows adding, editing and removing a Metric Assignment 5`] = `
<div>
  <div
    class="makeStyles-root-11"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom"
    >
      Assign Metrics
    </h4>
    <div
      class="MuiTableContainer-root"
    >
      <table
        class="MuiTable-root"
      >
        <thead
          class="MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Metric
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Attribution Window
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Change Expected?
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Minimum Difference
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              <span
                class="makeStyles-metricName-17"
                title="string"
              >
                asdf_7d_refund
              </span>
              <br />
              <span
                class="makeStyles-primary-18"
              >
                Primary
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              <div
                aria-label="Attribution Window"
                class="MuiInputBase-root MuiOutlinedInput-root makeStyles-attributionWindowSelect-16"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="mui-component-select-experiment.metricAssignments[0].attributionWindowSeconds"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                  id="mui-component-select-experiment.metricAssignments[0].attributionWindowSeconds"
                  role="button"
                  tabindex="0"
                >
                  -
                </div>
                <input
                  name="experiment.metricAssignments[0].attributionWindowSeconds"
                  type="hidden"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="PrivateNotchedOutline-legend-22"
                    style="width: 0.01px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body makeStyles-changeExpected-20"
            >
              <span
                class="MuiSwitch-root"
              >
                <span
                  aria-disabled="false"
                  aria-label="Change Expected"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-25 MuiSwitch-switchBase MuiSwitch-colorSecondary"
                  variant="outlined"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-28 MuiSwitch-input"
                      id="experiment.metricAssignments[0].changeExpected"
                      name="experiment.metricAssignments[0].changeExpected"
                      type="checkbox"
                      value="false"
                    />
                    <span
                      class="MuiSwitch-thumb"
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiSwitch-track"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              <div
                aria-label="Min difference"
                class="MuiFormControl-root MuiTextField-root makeStyles-minDifferenceField-19"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
                >
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionStart"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
                    >
                      $
                    </p>
                  </div>
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
                    name="experiment.metricAssignments[0].minDifference"
                    placeholder="-"
                    type="number"
                    value=""
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-22"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              <div>
                <button
                  aria-controls="menu"
                  aria-haspopup="true"
                  aria-label="more"
                  class="MuiButtonBase-root MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="makeStyles-addMetric-12"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-addMetricAddSymbol-13"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <div
        class="MuiFormControl-root makeStyles-addMetricSelect-15"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="add-metric-label add-metric-select"
            class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
            id="add-metric-select"
            role="button"
            tabindex="0"
          >
            <span
              class="makeStyles-addMetricPlaceholder-14"
            >
              Select a Metric
            </span>
          </div>
          <input
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <button
        aria-label="Add metric"
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall MuiButton-disableElevation"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`allows adding, editing and removing a Metric Assignment 6`] = `
<div>
  <div
    class="makeStyles-root-11"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom"
    >
      Assign Metrics
    </h4>
    <div
      class="MuiTableContainer-root"
    >
      <table
        class="MuiTable-root"
      >
        <thead
          class="MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Metric
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Attribution Window
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Change Expected?
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Minimum Difference
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body"
              colspan="5"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
              >
                You don't have any metrics yet.
              </p>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="makeStyles-addMetric-12"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-addMetricAddSymbol-13"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <div
        class="MuiFormControl-root makeStyles-addMetricSelect-15"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="add-metric-label add-metric-select"
            class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
            id="add-metric-select"
            role="button"
            tabindex="0"
          >
            <span
              class="makeStyles-addMetricPlaceholder-14"
            >
              Select a Metric
            </span>
          </div>
          <input
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <button
        aria-label="Add metric"
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall MuiButton-disableElevation"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`allows adding, editing and removing a Metric Assignment 7`] = `
<div>
  <div
    class="makeStyles-root-11"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom"
    >
      Assign Metrics
    </h4>
    <div
      class="MuiTableContainer-root"
    >
      <table
        class="MuiTable-root"
      >
        <thead
          class="MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Metric
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Attribution Window
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Change Expected?
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Minimum Difference
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              <span
                class="makeStyles-metricName-17"
                title="string"
              >
                registration_start
              </span>
              <br />
              <span
                class="makeStyles-primary-18"
              >
                Primary
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              <div
                aria-label="Attribution Window"
                class="MuiInputBase-root MuiOutlinedInput-root makeStyles-attributionWindowSelect-16"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="mui-component-select-experiment.metricAssignments[0].attributionWindowSeconds"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                  id="mui-component-select-experiment.metricAssignments[0].attributionWindowSeconds"
                  role="button"
                  tabindex="0"
                >
                  -
                </div>
                <input
                  name="experiment.metricAssignments[0].attributionWindowSeconds"
                  type="hidden"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root-29 MuiOutlinedInput-notchedOutline"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="PrivateNotchedOutline-legend-30"
                    style="width: 0.01px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body makeStyles-changeExpected-20"
            >
              <span
                class="MuiSwitch-root"
              >
                <span
                  aria-disabled="false"
                  aria-label="Change Expected"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-33 MuiSwitch-switchBase MuiSwitch-colorSecondary"
                  variant="outlined"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-36 MuiSwitch-input"
                      id="experiment.metricAssignments[0].changeExpected"
                      name="experiment.metricAssignments[0].changeExpected"
                      type="checkbox"
                      value="false"
                    />
                    <span
                      class="MuiSwitch-thumb"
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiSwitch-track"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              <div
                aria-label="Min difference"
                class="MuiFormControl-root MuiTextField-root makeStyles-minDifferenceField-19"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                    name="experiment.metricAssignments[0].minDifference"
                    placeholder="-"
                    type="number"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
                      title="Percentage Points"
                    >
                      pp
                    </p>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-29 MuiOutlinedInput-notchedOutline"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-30"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              <div>
                <button
                  aria-controls="menu"
                  aria-haspopup="true"
                  aria-label="more"
                  class="MuiButtonBase-root MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="makeStyles-addMetric-12"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-addMetricAddSymbol-13"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <div
        class="MuiFormControl-root makeStyles-addMetricSelect-15"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="add-metric-label add-metric-select"
            class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
            id="add-metric-select"
            role="button"
            tabindex="0"
          >
            <span
              class="makeStyles-addMetricPlaceholder-14"
            >
              Select a Metric
            </span>
          </div>
          <input
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <button
        aria-label="Add metric"
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall MuiButton-disableElevation"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`renders as expected 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom"
    >
      Assign Metrics
    </h4>
    <div
      class="MuiTableContainer-root"
    >
      <table
        class="MuiTable-root"
      >
        <thead
          class="MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Metric
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Attribution Window
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Change Expected?
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Minimum Difference
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body"
              colspan="5"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
              >
                You don't have any metrics yet.
              </p>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="makeStyles-addMetric-2"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-addMetricAddSymbol-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <div
        class="MuiFormControl-root makeStyles-addMetricSelect-5"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="add-metric-label add-metric-select"
            class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
            id="add-metric-select"
            role="button"
            tabindex="0"
          >
            <span
              class="makeStyles-addMetricPlaceholder-4"
            >
              Select a Metric
            </span>
          </div>
          <input
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <button
        aria-label="Add metric"
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall MuiButton-disableElevation"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;
